# jogo-tosco-tiro

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  Dockerfile  Jogo.cpp  Tiro.cpp  Tiro.h  Trunk.toml  audio.js  build.bat  build.sh  conanfile.txt  config.js  entities.js  entities_base.js  entities_enemies.js  entities_projectiles.js  entities_ship_encrenca.js  entities_ship_enemy.js  entities_ship_metralha.js  entities_ship_player.js  entities_ship_transport.js  entities_specials.js  game.js  hud.js  index.html  jogo.cpp  jogo.h  readme.md  starfield.js  tiro.cpp  tiro.h  utils.js  visuals.js  visuals_common.js  visuals_mesh_enemy.js  visuals_mesh_meteor.js  (+4 more)
.cargo/: config.toml
assets/ultimate_spaceships/: README.md
engine/: BaseEntity.js  collision.js  debrisPool.js  shootFactory.js
entities/: Debris.js  Encrenca.js  Enemy.js  EngineFlame.js  Guided.js  Laser.js  Meteor.js  Metralha.js  Missile.js  Nuclear.js  Player.js  Rain.js  Star.js  Transport.js
scripts/: build_and_serve.ps1  build_and_serve.sh
src/: constants.rs  lib.rs  main.rs
src/audio/: mod.rs
src/core/: mod.rs  resources.rs  state.rs
src/effects/: mod.rs
src/gameplay/: components.rs
src/gameplay/combat/: mod.rs
src/gameplay/enemy/: mod.rs
src/gameplay/player/: mod.rs
src/input/: mod.rs
src/physics/: mod.rs
src/rendering/: mod.rs
src/ui/: mod.rs
src/util/: mod.rs
src/world/: mod.rs
