[package]
name = "jogo-tosco-tiro"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "webgl2",
] }
bevy_egui = "0.26"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.17"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
