[package]
name = "jogo-tosco-tiro"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
    "hdr",
    "tonemapping_luts",
    "multi-threaded",
] }
bevy_egui = "0.26"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.13", default-features = false, features = ["x11", "wayland"] }
rodio = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.13", default-features = false, features = ["webgl2"] }
wasm-bindgen = "0.2"
web-sys = { version = "=0.3.69", features = ["AudioContext", "AudioNode", "AudioDestinationNode", "OscillatorNode", "GainNode", "AudioParam", "OscillatorType", "AudioBuffer", "AudioBufferSourceNode", "Window", "Document", "Element", "Node", "HtmlCanvasElement"] }

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1.18.1"
features = ["js", "rng-getrandom"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]
